--- a/Config/GarrisonButlerImages.resx
+++ b/Config/GarrisonButlerImages.resx
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+  
+  <!-- ReSharper disable MarkupTextTypo --><!-- 
     Microsoft ResX Schema 
     
     Version 2.0
