--- a/ResourceWebUI.resx
+++ b/ResourceWebUI.resx
@@ -118,37 +118,43 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="angular_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\libraries\angular\angular.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="general_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\modules\general-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="angular_route_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\libraries\angular\angular-route.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="mailing_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\modules\mailing-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="mobile_angular_ui_base_min_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\libraries\mobileangularui\css\mobile-angular-ui-base.min.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="mainUI_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\mainui.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="mobile_angular_ui_desktop_min_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\libraries\mobileangularui\css\mobile-angular-ui-desktop.min.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="mainUI_html" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\mainui.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="mobile_angular_ui_hover_min_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\libraries\mobileangularui\css\mobile-angular-ui-hover.min.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="mainUI_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\mainui.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="mobile_angular_ui_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\libraries\mobileangularui\js\mobile-angular-ui.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="milling_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\modules\milling-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="test_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\test.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="profession_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\modules\profession-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="test_html" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\test.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="slider_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\libraries\slider\slider.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="test_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\test.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="smart_table_min" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\libraries\smarttable\smart-table.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="ui_grid_min_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\libraries\uigrid\ui-grid.min.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="trading_post_module" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\modules\trading-post.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="ui_grid_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>webui\libraries\uigrid\ui-grid.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  <data name="work_order_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\modules\work-order-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="xeditable_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>WebUI\Libraries\angular-xeditable\css\xeditable.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="xeditable_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>WebUI\Libraries\angular-xeditable\js\xeditable.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
