--- a/ResourceWebUI.resx
+++ b/ResourceWebUI.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="follower_data" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>WebUI\Libraries\follower_data.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="general_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>webui\modules\general-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
@@ -135,6 +138,9 @@
   </data>
   <data name="milling_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>webui\modules\milling-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="mission_data" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>WebUI\Libraries\mission_data.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="profession_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>webui\modules\profession-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
