--- a/ResourceWebUI.resx
+++ b/ResourceWebUI.resx
@@ -139,6 +139,9 @@
   <data name="milling_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>webui\modules\milling-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="missions_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>WebUI\Modules\missions-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="mission_data" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>WebUI\Libraries\mission_data.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
