--- a/ResourceWebUI.resx
+++ b/ResourceWebUI.resx
@@ -166,4 +166,22 @@
   <data name="xeditable_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>WebUI\Libraries\angular-xeditable\js\xeditable.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="angular_animate_min" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\libraries\angular\angular-animate.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="angular_aria_min" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\libraries\angular\angular-aria.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="angular_material_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\libraries\angular\angular-material.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="angular_min" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\libraries\angular\angular.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="bootstrap_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\libraries\angular\bootstrap.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="hammer_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\libraries\angular\hammer.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
