--- a/ResourceWebUI.resx
+++ b/ResourceWebUI.resx
@@ -184,4 +184,7 @@
   <data name="hammer_min_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>webui\libraries\angular\hammer.min.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="enchanting_tab_module_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>webui\modules\enchanting-tab.module.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
